--- a/lab2/exercise.ipynb
+++ b/lab2/exercise.ipynb
@@ -48,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
