--- a/lab5Analiza/Commands/Convertion_to_csv_to_tidy.ipynb
+++ b/lab5Analiza/Commands/Convertion_to_csv_to_tidy.ipynb
@@ -2,22 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import pandas as pd\n",
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
+    "# read file\n",
     "file = open('../Orginal Data/weather/weather.txt')\n",
     "data = file.read()\n",
     "file.close()\n",
     "\n",
+    "# remove non standard data separators\n",
     "data = re.sub('[BDS]?[\\t ]+(OI|OS|SI|I+|S+)[\\t ]*',',',data)\n",
     "data = re.sub('[\\t ]+',',',data)\n",
     "data = re.sub('\\s*,[\\t ]*\\n','\\n',data)\n",
     "data = re.sub('MX000017004(\\d\\d\\d\\d)(\\d\\d)(\\w\\w\\w\\w)','\\g<1>-\\g<2>,\\g<3>',data)\n",
+    "# remove wrong data\n",
     "data = data.replace('-9999','')\n",
     "\n",
     "# creating header\n",
@@ -36,36 +48,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import math\n",
-    "\n",
+    "# read file\n",
     "file = '../Orginal Data/weather/MX000017004_.csv'\n",
     "\n",
     "data = pd.read_csv(file)\n",
     "data_new = {}\n",
     "counter = 0\n",
     "\n",
+    "# reshape table wide to long\n",
+    "# for each row of wide table\n",
     "for row in data.itertuples():\n",
+    "    # for each day's column \n",
     "    for day in range(1,32):\n",
-    "        day_ = row[1]+'-'+str(i).zfill(2)\n",
-    "        \n",
+    "        # create data 'year-month'+'-day'\n",
+    "        day_ = row[1]+'-'+str(day).zfill(2)\n",
+    "        # get value of variable \n",
     "        value = row[2+day]\n",
-    "            \n",
+    "        # create entry variable : value\n",
+    "        # where variable is TMIN, TMAX, PRCP\n",
     "        entry = {row[2]: value}\n",
     "        \n",
+    "        # if entry for day_ was added, then extend it\n",
     "        if day_ in data_new.keys():\n",
     "            entry = {**data_new[day_], **entry}\n",
-    "        \n",
+    "        # replace or add updated/new entry\n",
     "        data_new[day_] = entry \n",
     "        \n",
+    "# create data frame from dicts\n",
     "data_new = pd.DataFrame(data_new).T.query('TMAX != \"NaN\" or TMIN != \"NaN\" or PRCP != \"NaN\"')\n",
     "        \n",
+    "# save fle \n",
     "file = open('../Analysis Data/MX000017004_tidy.csv', 'w')\n",
     "file.write('DAY' + data_new.to_csv())\n",
     "file.close()"
@@ -73,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -106,33 +124,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>1955-0531</td>\n",
-       "      <td>290.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1955-0731</td>\n",
-       "      <td>260.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1955-0831</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>64.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1955-1031</td>\n",
-       "      <td>250.0</td>\n",
+       "      <td>1955-04-01</td>\n",
+       "      <td>310.0</td>\n",
        "      <td>150.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1955-1231</td>\n",
-       "      <td>230.0</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>1955-04-02</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1955-04-03</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1955-04-04</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1955-04-05</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>160.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -140,21 +158,22 @@
        "</div>"
       ],
       "text/plain": [
-       "            TMAX   TMIN  PRCP\n",
-       "1955-0531  290.0  160.0  46.0\n",
-       "1955-0731  260.0  140.0   6.0\n",
-       "1955-0831  250.0  150.0  64.0\n",
-       "1955-1031  250.0  150.0   0.0\n",
-       "1955-1231  230.0   90.0   0.0"
+       "             TMAX   TMIN  PRCP\n",
+       "1955-04-01  310.0  150.0   0.0\n",
+       "1955-04-02  310.0  150.0   0.0\n",
+       "1955-04-03  310.0  160.0   0.0\n",
+       "1955-04-04  320.0  150.0   0.0\n",
+       "1955-04-05  330.0  160.0   0.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_new.head()"
+    "# show data\n",
+    "data_new.head()\n"
    ]
   }
  ],
